# utn-mdsii

./: .gitignore  README.md
src/clase-01/: codigo-limpio.py  codigo-mal.py
src/clase-02/: README.md
src/clase-02/docs/: GIT_CHEATSHEET.md
src/clase-03/: README.md
src/clase-03/js/: README.md  package.json
src/clase-03/python/poetry/: README.md  app_poetry.py  pyproject.toml
src/clase-03/python/poetry/tests/: test_sample_poetry.py
src/clase-04/: README.md
src/clase-04/practica/: README.md  package.json  tsconfig.json
src/clase-04/python/: builder.py  builder2.py  factory.py  factory2.py  singleton.py
src/clase-04/ts/: builder.ts  factory.ts  package-lock.json  package.json  singleton.ts  tsconfig.json
src/clase-05/: README.md
src/clase-05/practica/: README.md
src/clase-05/python/: adapter.py  adapter2.py  adapter3.py  decorator.py  decorator2.py  facade.py  facade.video.lib.py
src/clase-05/typescript/: adapter.conceptual.ts  adapter.ts  decorator.conceptual.ts  decorator.ts  facade.ts  facade.video.lib.ts  package-lock.json  package.json  tsconfig.json
src/clase-06/: README.md
src/clase-06/python/: observer.py
src/clase-06/typescript/: observer.ts
src/clase-07/python/: 01_bad_code.py  02_clean_code.py  03_refactor_01.py  04_refactor_02.py  05_refactor_03.py  06_solid_s_01.py  07_solid_s_02.py  10_solid_l_01.py  11_solid_l_02.py
src/clase-07/typescript/: 08_solid_o_01.ts  09_solid_o_02.ts  12_solid_i_01.ts  13_solid_i_02.ts  14_solid_d_01.ts  15_solid_d_02.ts
src/clase-11/: SonarQube.md
src/clase-12/: README_CI.md  README_CIV2.md
(+68 files in other folders)
